# parallel-programing

./: .gitignore  FuldaHPCCluster.md
ex2/: CMakeLists.txt  Makefile
ex4/: Makefile  matmul.c  matrix_mul  slurm-15920.out  slurm-15924.out  slurmSubmit.sh
ex5/: Makefile  pi_par.c  pi_par_critical.c  pi_seq  pi_seq.c  slurmSubmit.sh
ex6/: pi_par  pi_par.c  pi_seq.c
ex8/: Makefile  fib_tasks.c  slurmSubmit.sh  sum_taskloop.c
sem_project_2/: Makefile  README.md  matmul.c  matmul_v2.c  performance_analysis.tex  submit_matmul.sh
sem_project_2.1/: Makefile  README.md  matmul  matmul.c  plot_results.py  run_matmul.sh
